examples/test/testpolicy4148.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4148
  namespace: namespace12
spec:
  podSelector:
    matchLabels:
      key46: value0
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value19
          key28: value2
          key35: value9
      podSelector:
        matchLabels:
          key20: value18
          key22: value5
          key1: value27
